samples/invalid/syntax/path_whitespace.g
language g0

asm.result = foo.[42].  bar
